...
                                    ],
                                  ),
                                  SizedBox(
                                    height: height * 0.010,
                                  ),
                                  TextFormField(
                                    key: Key("emailFormField"),
                                    controller: emailController,
                                    decoration: InputDecoration(
                                      suffixIcon: Icon(
                                        Icons.email,
                                        color: Colors.black,
                                      ),
...
                                    ),
                                  ),
                                  SizedBox(
                                    height: height * 0.010,
                                  ),
                                  TextFormField(
                                    key: Key("regFirstNameForm"),
                                    controller: firstNameController,
                                    decoration: InputDecoration(
                                      suffixIcon: Icon(
                                        Icons.person_outline_outlined,
                                        color: Colors.black,
                                      ),
...
                                    ),
                                  ),
                                  SizedBox(
                                    height: height * 0.010,
                                  ),
                                  TextFormField(
                                    key: Key("regLastNameForm"),
                                    controller: lastNameController,
                                    decoration: InputDecoration(
                                      suffixIcon: Icon(
                                        Icons.person,
                                        color: Colors.black,
                                      ),
...
                                    ),
                                  ),
                                  SizedBox(
                                    height: height * 0.010,
                                  ),
                                  TextFormField(
                                    key: Key("regPassField"),
                                    controller: passwordController,
                                    obscureText: true,
                                    decoration: InputDecoration(
                                      hintText: 'Password',
                                    ),
                                  ),
                                  SizedBox(
                                    height: height * 0.010,
                                  ),
                                  TextFormField(
                                    key: Key("regConfirmPassField"),
                                    controller: cpasswordController,
                                    obscureText: true,
                                    decoration: InputDecoration(
                                      hintText: 'Confirm Password',
                                    ),
                                    validator: (value) {
...
                                ],
                              ),
                              Column(
                                crossAxisAlignment: CrossAxisAlignment.center,
                                children: [
                                  ElevatedButton(
                                    key: Key("regButton"),
                                    onPressed: () async {
                                      final isValid =
                                          _formKey.currentState!.validate();
                                      if (isValid) {
                                        try {
                                          await FirebaseAuth.instance
...
