...
                                  ),
                                ),
                                SizedBox(
                                  height: height * 0.005,
                                ),
                                TextField(
                                  key: Key("webLoginEmailField"),
                                  controller: emailController,
                                  decoration: InputDecoration(
                                    enabledBorder: OutlineInputBorder(
                                      borderRadius: BorderRadius.all(
                                          Radius.circular(8.0)),
                                      borderSide: const BorderSide(
...
                                  ),
                                ),
                                SizedBox(
                                  height: height * 0.005,
                                ),
                                TextFormField(
                                  key: Key("webLoginPassField"),
                                  keyboardType: TextInputType.text,
                                  controller: passwordController,
                                  obscureText: !_passwordVisible,
                                  decoration: InputDecoration(
                                    enabledBorder: OutlineInputBorder(
                                      borderRadius: BorderRadius.all(
...
                                        });
                                      },
                                      child: Icon(
                                          _passwordVisible
                                              ? Icons.visibility
                                              : Icons.visibility_off,
                                          key: Key("passVisibIcon"),
                                          color: Colors.grey[700]),
                                    ),
                                  ),
                                ),
                                SizedBox(
                                  height: height * 0.03,
                                ),
                              ],
                            ),
                            ElevatedButton(
                              key: Key("webLoginButton"),
                              onPressed: () async {
                                try {
                                  await auth
                                      .signInWithEmailAndPassword(
                                    email: emailController.text,
                                    password: passwordController.text,
...
